corrigido metodo  getcopnfrontation